# MO-ai-intro

./: .gitignore  .sops.yaml  README.md  config.yaml  env.yaml  pyproject.toml  server.py  setup.py  start.py
ai-intro/: pyproject.toml
core/: hello_secrets.py  train_api.py  train_stations.py  travel_api.py  weather_api.py
data/: train_stations.json
docs/development-guides/: sops.mdx
prompts/: hello_prompt.py  travel_prompt.py
resources/: hello_resource.py  train_stations.py
tests/: test_mcp_connection.py  test_secrets.py  test_train_api.py  test_train_stations.py  test_train_tool.py  test_travel_api.py  test_travel_tool.py  test_weather_api.py  test_weather_tool.py
tools/: hello_tool.py  train_tool.py  travalguide.py  travel_tool.py  weather_tool.py
web_app/: ai_driver.py  main.py  mcp_client.py
web_app/templates/: index.html
